--- a/announcements.html
+++ b/announcements.html
@@ -1,27 +1,18 @@
-div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
+<div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
   <span>
-    TEST - Are you having problems logging into LINK/LRC? Read more 
+    TEST - Having problems logging into the new LRC? Read more 
     <a href="https://supportcentral.libertytax.net/hc/en-us/articles/34426677214999-Logging-Into-LINK-New-LRC-Powered-by-FranConnect" style="color:#000; text-decoration:underline;">here</a>.
   </span>
 </div>
-
-<br>
-
-<div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
+  
+  <br>
+  
+  
+  <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
   <span>
    User Manager accounts are automatically disabled after 30 days of inactivity. Learn how to reactivate your staff's accounts
     <a href="https://supportcentral.libertytax.net/hc/en-us/articles/6961988401559-How-Do-I-Reactivate-a-Disabled-Employee-Account" style="color:#000; text-decoration:underline;">here</a>.
-  </span>
-</div>
-
-<br>
-
-<div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
-  <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
-  <span>
-    Microsoft has ended its support of Windows 10 on October 14, 2025. Learn how to upgrade to Windows 11 
-    <a href="https://supportcentral.libertytax.net/hc/en-us/articles/4410646721687-Windows-10-Support-Ending-Soon-What-You-Need-to-Do" style="color:#000; text-decoration:underline;">here</a>.
   </span>
 </div>
