--- a/announcements.html
+++ b/announcements.html
@@ -1,7 +1,7 @@
 <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
   <span>
-    Are you having problems logging into the new LRC? Read more 
+    *Are you having problems logging into the new LRC? Read more 
     <a href="https://supportcentral.libertytax.net/hc/en-us/articles/34426677214999-Logging-Into-LINK-New-LRC-Powered-by-FranConnect" style="color:#000; text-decoration:underline;">here</a>.
   </span>
 </div>
