--- a/announcements.html
+++ b/announcements.html
@@ -1,6 +1,16 @@
 <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
   <span>
+    Great News! Online Check Printing (OCP) will now update to the newest version automatically. Read more 
+    <a href="https://supportcentral.libertytax.net/hc/en-us/articles/35784552630423-Online-Check-Printing-OCP-will-now-update-to-the-newest-version-automatically" style="color:#000; text-decoration:underline;">here</a>.
+  </span>
+</div>
+
+<br>
+
+<div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
+  <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
+  <span>
     Are you having problems logging into LINK/LRC? Read more 
     <a href="https://supportcentral.libertytax.net/hc/en-us/articles/34426677214999-Logging-Into-LINK-New-LRC-Powered-by-FranConnect" style="color:#000; text-decoration:underline;">here</a>.
   </span>
@@ -19,7 +29,7 @@
   
   <br>
   
-  <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
+  <div style="background-color:#FF0000; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
   <span>
     Microsoft has ended its support of Windows 10 on October 14, 2025. Learn how to upgrade to Windows 11 
