Add LINK scheduled downtime announcement for November 12, 2025

--- a/announcements-us.html
+++ b/announcements-us.html
@@ -1,4 +1,16 @@
-<!-- PRIORITY 1: Product Update - Active -->
+<!-- PRIORITY 1: System Maintenance - Active -->
+<!-- Topic: LINK Scheduled Downtime | Added: 2025-01-30 | Article: 36255903567639 -->
+<div style="background-color:#FF0000; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
+  <span style="background-color:white; color:#FF0000; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
+  <span>
+    LINK will be unavailable during scheduled maintenance on November 12, 2025 from 11:00 PM - 5:00 AM EST. Read more 
+    <a href="https://supportcentral.libertytax.net/hc/en-us/articles/36255903567639-LINK-downtime-tomorrow-night-11-12-2025" style="color:#000; text-decoration:underline;">here</a>.
+  </span>
+</div>
+
+<br>
+
+<!-- PRIORITY 2: Product Update - Active -->
 <!-- Topic: OCP Auto-Update | Added: [Previous] | Article: 35784552630423 -->
 <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
@@ -10,7 +22,7 @@
 
 <br>
 
-<!-- PRIORITY 2: Login Issues - Active -->
+<!-- PRIORITY 3: Login Issues - Active -->
 <!-- Topic: LINK/LRC Login | Added: [Previous] | Article: 34426677214999 -->
 <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
@@ -22,7 +34,7 @@
 
 <br>
 
-<!-- PRIORITY 3: Account Management - Active -->
+<!-- PRIORITY 4: Account Management - Active -->
 <!-- Topic: User Manager Inactivity | Added: [Previous] | Article: 6961988401559 -->
 <div style="background-color:#42a5f5; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
@@ -34,7 +46,7 @@
 
 <br>
 
-<!-- PRIORITY 4: Critical Deadline - Active -->
+<!-- PRIORITY 5: Critical Deadline - Active -->
 <!-- Topic: Windows 10 End of Support | Added: [Previous] | Article: 4410646721687 | Deadline: 2025-10-14 -->
 <div style="background-color:#FF0000; color:white; padding:10px 15px; border-radius:6px; font-family:Arial, sans-serif; display:flex; align-items:center;">
   <span style="background-color:white; color:#42a5f5; border-radius:50%; width:20px; height:20px; display:flex; align-items:center; justify-content:center; font-weight:bold; margin-right:10px;">i</span>
